# fie

./: .gitignore  LICENSE  README.frontend.md  README.md  dump_pdf_text.py  goat.py  plumbergoat.py  pyproject.toml  readme_MEE.txt  requirements.txt  restart_web.sh
debug_dump/: Frontendplan.txt  canara.txt  canara1m.txt  canara1m_coords.txt  canara2.txt  canara2_coords.txt  canara3.txt  canara3_coords.txt  canara_all_rawtxns.txt  canara_coords.txt
fie/: activity_logs.json  auto_rules.json  cli.py  config.py  config.yaml  defaults.py  extract_frontendplan.py  settings.json  transactions.json  trash.json  web_ui.py
fie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
fie/analysis/: summary.py
fie/app/: edit.py  list.py  load.py  summary.py
fie/core/: engine.py  rules.py  transaction.py
fie/ingest/: canara.py
fie/report/: printer.py
fie/static/: app.js  styles.css
fie/storage/: base.py  json_store.py
fie/tagging/: edit.py  edit_tag.py  review.py
fie/templates/: index.html  login.html
tests/: test_web_ui.py
