[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fie"
version = "1.0.0"
description = "Financial Intelligence Engine"
requires-python = ">=3.10"

dependencies = [
  "pdfplumber",
  "argparse",
  "PyYAML",
]

[project.scripts]
fie = "fie.cli:main"
