[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fie"
version = "1.0.0"
description = "Financial Intelligence Engine - Privacy-first personal finance tracker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["finance", "budget", "personal-finance", "expense-tracker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
  "pdfplumber>=0.10.0",
  "PyYAML>=6.0",
  "Flask>=3.0.0",
]

[project.scripts]
fie = "fie.cli:main"

[project.urls]
Homepage = "https://github.com/Mahesh-pareek/fie"
Repository = "https://github.com/Mahesh-pareek/fie"
Documentation = "https://github.com/Mahesh-pareek/fie#readme"
